--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,37 @@
             "mainClass": "dev.rooster.ms_config_server.MsConfigServerApplication",
             "projectName": "ms-config-server",
             "args": "",
+            "envFile": "${workspaceFolder}/.env",
+            "vmArgs": " -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=61492 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dspring.jmx.enabled=true -Djava.rmi.server.hostname=localhost -Dspring.application.admin.enabled=true -Dspring.boot.project.name=ms-config-server"
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-MsRegistryServerApplication<ms-registry-server>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "mainClass": "dev.rooster.ms_registry_server.MsRegistryServerApplication",
+            "projectName": "ms-registry-server",
+            "args": "",
+            "envFile": "${workspaceFolder}/.env"
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-MsGatewayServerApplication<ms-gateway-server>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "mainClass": "dev.rooster.ms_gateway_server.MsGatewayServerApplication",
+            "projectName": "ms-gateway-server",
+            "args": "",
+            "envFile": "${workspaceFolder}/.env"
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-MsEstudianteApplication<ms-estudiante>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "mainClass": "dev.rooster.ms_estudiante.MsEstudianteApplication",
+            "projectName": "ms-estudiante",
+            "args": "",
             "envFile": "${workspaceFolder}/.env"
         }
     ]
