--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,8 @@
             "mainClass": "dev.rooster.ms_registry_server.MsRegistryServerApplication",
             "projectName": "ms-registry-server",
             "args": "",
-            "envFile": "${workspaceFolder}/.env"
+            "envFile": "${workspaceFolder}/.env",
+            "vmArgs": " -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=54193 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dspring.jmx.enabled=true -Djava.rmi.server.hostname=localhost -Dspring.application.admin.enabled=true -Dspring.boot.project.name=ms-registry-server"
         },
         {
             "type": "java",
@@ -29,7 +30,8 @@
             "mainClass": "dev.rooster.ms_gateway_server.MsGatewayServerApplication",
             "projectName": "ms-gateway-server",
             "args": "",
-            "envFile": "${workspaceFolder}/.env"
+            "envFile": "${workspaceFolder}/.env",
+            "vmArgs": " -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=54228 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dspring.jmx.enabled=true -Djava.rmi.server.hostname=localhost -Dspring.application.admin.enabled=true -Dspring.boot.project.name=ms-gateway-server"
         },
         {
             "type": "java",
@@ -38,6 +40,16 @@
             "cwd": "${workspaceFolder}",
             "mainClass": "dev.rooster.ms_estudiante.MsEstudianteApplication",
             "projectName": "ms-estudiante",
+            "args": "",
+            "envFile": "${workspaceFolder}/.env"
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-MsAuthApplication<ms-auth>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "mainClass": "dev.rooster.ms_auth.MsAuthApplication",
+            "projectName": "ms-auth",
             "args": "",
             "envFile": "${workspaceFolder}/.env"
         }
