--- a/config-data/ms-gateway-service.yml
+++ b/config-data/ms-gateway-service.yml
@@ -19,3 +19,9 @@ spring:
           uri: lb://ms-estudiante-service
           predicates:
             - Path=/estudiante/**
+          filters:
+            - AuthFilter
+        - id: ms-auth-service
+          uri: lb://ms-auth-service
+          predicates:
+            - Path=/auth/**
