--- a/config-data/ms-gateway-service.yml
+++ b/config-data/ms-gateway-service.yml
@@ -1,5 +1,7 @@
 server:
-  port: 8080
+  port: 82
+
+
 eureka:
   client:
     serviceUrl:
@@ -11,17 +13,49 @@ eureka:
 spring:
   cloud:
     gateway:
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+            allowedOrigins: "http://localhost:5173"
+            allowedHeaders: "*"
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
       discovery:
         locator:
           enable: true
       routes:
+        - id: ms-gestionestudiantes-service
+          uri: lb://ms-gestionestudiantes-service
+          predicates:
+            - Path=/estudiante/**, /historialacademico/**
+        - id: ms-gestiondocentes-service
+          uri: lb://ms-gestiondocentes-service
+          predicates:
+            - Path=/asignatura/**, /docente/**
+        - id: ms-monitoreoasistencia-service
+          uri: lb://ms-monitoreoasistencia-service
+          predicates:
+            - Path=/registroasistencia/**
+        - id: ms-reporte-service
+          uri: lb://ms-reporte-service
+          predicates:
+            - Path=/reportes/**
         - id: ms-auth-service
           uri: lb://ms-auth-service
           predicates:
             - Path=/auth/**
+        - id: ms-matricula-service
+          uri: lb://ms-matricula-service
+          predicates:
+            - Path=/matricula/**, /horario/**
           filters:
             - AuthFilter
-        - id: ms-empresa-service
-          uri: lb://ms-empresa-service
-          predicates:
-            - Path=/empresa/**
+
+
+
+
+
+
