--- a/config-data/ms-gestionestudiantes-service.yml
+++ b/config-data/ms-gestionestudiantes-service.yml
@@ -1,8 +1,12 @@
 server:
-
-  port: ${PORT:${SERVERS_PORT:0}}
-
-
+  #port: 8082
+  port: ${PORT:${SERVER_PORT:0}}
+springdoc:
+  api-docs:
+    enabled: true
+  swagger-ui:
+    enabled: true
+    path: /doc/swagger-ui.html
 spring:
   jpa:
     hibernate.ddl-auto: update
@@ -10,18 +14,15 @@ spring:
     show-sql: true
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/ms_auth
+    url: jdbc:mysql://localhost:3306/ms-gestionestudiantes
     username: root
     password:
-
 
 eureka:
   client:
     serviceUrl:
-
+      #defaultZone: http://localhost:8090/eureka
       defaultZone: ${EUREKA_URI:http://localhost:8090/eureka}
   instance:
-
+    #hostname: localhost
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
-jwt:
-  secret: secret
