--- a/ms-auth/pom.xml
+++ b/ms-auth/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>auth-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>auth-service</name>
-    <description>Autenticador de Usuarios</description>
+    <description>Spring cloud</description>
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2020.0.3</spring-cloud.version>
