--- a/ms-config-server/src/main/resources/application.yml
+++ b/ms-config-server/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 server:
   port: 7070
+
+
 spring:
   application:
     name: config-server
@@ -13,7 +15,10 @@ spring:
           #password:
           default-label: main
 
+
+
+
   security:
     user:
-      name: dev
-      password: rooster
+      name: root
+      password: 123456
