--- a/ms-registry-server/pom.xml
+++ b/ms-registry-server/pom.xml
@@ -1,32 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.8</version>
-		<relativePath/>
-		<!-- lookup parent from repository -->
+		<version>3.2.4</version>
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>dev.rooster</groupId>
+	<groupId>com.example</groupId>
 	<artifactId>ms-registry-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ms-registry-server</name>
-	<description>Registros de Eureka</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
+	<description>ms-registry-server</description>
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2023.0.1</spring-cloud.version>
@@ -58,6 +44,7 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -66,4 +53,5 @@
 			</plugin>
 		</plugins>
 	</build>
+
 </project>
