--- a/config-data/ms-gateway-service.yml
+++ b/config-data/ms-gateway-service.yml
@@ -30,29 +30,14 @@ spring:
         - id: ms-gestionestudiantes-service
           uri: lb://ms-gestionestudiantes-service
           predicates:
-            - Path=/estudiante/**, /historialacademico/**
-        - id: ms-gestiondocentes-service
-          uri: lb://ms-gestiondocentes-service
-          predicates:
-            - Path=/asignatura/**, /docente/**
-        - id: ms-monitoreoasistencia-service
-          uri: lb://ms-monitoreoasistencia-service
-          predicates:
-            - Path=/registroasistencia/**
-        - id: ms-reporte-service
-          uri: lb://ms-reporte-service
-          predicates:
-            - Path=/reportes/**
+            - Path=/estudiante/**
         - id: ms-auth-service
           uri: lb://ms-auth-service
           predicates:
             - Path=/auth/**
-        - id: ms-matricula-service
-          uri: lb://ms-matricula-service
-          predicates:
-            - Path=/matricula/**, /horario/**
           filters:
             - AuthFilter
+
 
 
 
