--- a/config-data/ms-gestionoferta-service.yml
+++ b/config-data/ms-gestionoferta-service.yml
@@ -14,7 +14,7 @@ spring:
     show-sql: true
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/gt-empresa
+    url: jdbc:mysql://localhost:3306/gt-oferta
     username: root
     password:
 
