--- a/config-data/ms-gateway-service.yml
+++ b/config-data/ms-gateway-service.yml
@@ -1,7 +1,6 @@
 server:
   port: 8080
 
-
 eureka:
   client:
     serviceUrl:
@@ -10,6 +9,7 @@ eureka:
   instance:
     #hostname: localhost
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+
 spring:
   cloud:
     gateway:
@@ -32,28 +32,45 @@ spring:
           predicates:
             - Path=/estudiante/**
           filters:
-            - AuthFilter
+            - AuthFilter  # Aplica el filtro aquí, protegiendo la ruta de estudiantes
+
         - id: ms-auth-service
           uri: lb://ms-auth-service
           predicates:
             - Path=/auth/**
+          # No se aplica AuthFilter aquí porque no queremos que la ruta de autenticación esté protegida
+
         - id: ms-gestionempresa-service
           uri: lb://ms-gestionempresa-service
           predicates:
             - Path=/empresa/**
-        - id : ms-gestionoferta-service
+          filters:
+            - AuthFilter  # Aplica el filtro aquí, protegiendo la ruta de empresas
+
+        - id: ms-gestionoferta-service
           uri: lb://ms-gestionoferta-service
           predicates:
             - Path=/oferta/**
+          filters:
+            - AuthFilter  # Aplica el filtro aquí, protegiendo la ruta de ofertas
+
         - id: ms-gestionpostulacion-service
           uri: lb://ms-gestionpostulacion-service
           predicates:
             - Path=/postulacion/**
+          filters:
+            - AuthFilter  # Aplica el filtro aquí, protegiendo la ruta de postulaciones
+
         - id: ms-gestionnotificacion-service
           uri: lb://ms-gestionnotificacion-service
           predicates: 
             - Path=/notificacion/**
-        - id : ms-gestionseguimiento-service
+          filters:
+            - AuthFilter  # Aplica el filtro aquí, protegiendo la ruta de notificaciones
+
+        - id: ms-gestionseguimiento-service
           uri: lb://ms-gestionseguimiento-service
           predicates:
             - Path=/seguimiento/**
+          filters:
+            - AuthFilter  # Aplica el filtro aquí, protegiendo la ruta de seguimiento
