--- a/lb-frontend/package.json
+++ b/lb-frontend/package.json
@@ -13,6 +13,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "axios": "^1.7.7",
     "framer-motion": "^11.5.4",
+    "jquery": "^3.7.1",
     "lb-frontend": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
